infrastructure/kubernetes/landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: maratea
  labels:
    app: landing
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: landing
